--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,8 @@
     <!-- ...existing HTML code... -->
 
     <!-- <script src="index.js"></script> -->
-    <script src="index2.js"></script>
+    <!-- <script src="index2.js"></script> -->
+    <script src="index3.js" defer></script>
 
     <link
       rel="stylesheet"
@@ -240,7 +241,7 @@
           </div>
         </div>
         <div class="newsletter">
-          <div class="newsletter-form">
+          <!-- <div class="newsletter-form">
             <div class="input">
               <div class="input-child"></div>
               <div class="email-address">Email address...</div>
@@ -257,12 +258,21 @@
             <div class="section-title1">
               <div class="or-subscribe-to">Or subscribe to the newsletter</div>
             </div>
-          </div>
+          </div> -->
+          <DIV class="contentx">
+            <H2><b>Why Rudraksham Is Truly & Spiritually Yours?</b></H2>
+
+We at Rudraksham have worked diligently for many years with our Guru and Yogis to unlock the hidden power of Rudraksha. There are many sellers of Rudraksha today but sadly they do not know the hidden and most powerful methods to unlock the true potential of Rudraksha. A simple Puja or blessing is not enough.
+
+Our process Uses the hidden mantras passed only from guru to disciple. The entire energizing ritual lasts a minimum of 8 days and can take up to 108. During this time we are deep into the Sadhana with full focus and attention.
+
+In a short time, you can see the difference between a properly energized bead and one that has had an elementary blessing or none at all. OUR Rudraksha are as described in Shastra with the POWER to change your life.
+          </DIV>
         </div>
       </div>
       <div class="slider-products">
         <div class="section-title2">
-          <div class="or-subscribe-to">Best Products</div>
+          <div class="or-subscribe-to">BEST SELLING PRODUCTS</div>
         </div>
         <div class="top-section-products">
           <div class="category">
@@ -396,9 +406,9 @@
         </div>
       </div>
       <div class="brand-banner">
-        <img class="background-icon" alt="" src="./images/29.jpg" />
+        <img class="background-icon" alt="" src="./images/30.jpg" />
 
-        <div class="lustrous-yet-understated-container">
+        <!-- <div class="lustrous-yet-understated-container">
           <p class="lorem-ipsum-dolor">
             Lustrous yet understated. The new evening
           </p>
@@ -409,29 +419,29 @@
             reopened Giorgio Armani boutique in Los
           </p>
           <p class="dolore-magna-aliqua">Angeles.</p>
-        </div>
+        </div> -->
         <img
           class="px-zara-logo-1-icon"
           alt=""
           src="./public/1024pxzara-logo-1@2x.png"
         />
-
+<!-- 
         <img
           class="px-zara-logo-2-icon"
           alt=""
           src="./public/1024pxzara-logo-2@2x.png"
-        />
+        /> -->
 
-        <div class="button3">
+        <!-- <div class="button3">
           <div class="v6-icon-free15">
             <div class="icon15"></div>
           </div>
           <div class="shop-now">see collection</div>
-        </div>
+        </div> -->
       </div>
       <div class="grid-products">
         <div class="section-title2">
-          <div class="or-subscribe-to">Or subscribe to the newsletter</div>
+          <div class="or-subscribe-to">NEW COLLECTIONS</div>
         </div>
         <div class="top-section-products">
           <div class="category">
@@ -442,7 +452,9 @@
               <section id="Collection">Collection</section>
             </div>
             <div class="item-tab2">
-              <div class="item15">Rudraksha Mala</div>
+              <div class="item15">
+                <a href="/mussorie.html">Rudraksha Mala</a>
+              </div>
             </div>
             <div class="item-tab3">
               <div class="item15">Rudraksha Tree</div>
@@ -760,32 +772,10 @@
           alt=""
           src="./public/flowerpattern.svg"
         />
-
-        <div class="product5">
-          <div class="image-product">
-            <div class="image-product-child"></div>
-            <div class="img19">
-              <img class="image-product-12-icon" alt="" src="./images/7.jpg" />
-            </div>
-          </div>
-          <div class="content">
-            <div class="collections">collections</div>
-            <div class="you-can-explore-container">
-              <p class="lorem-ipsum-dolor">
-                you can explore and shop many differnt collection of rudraksha.
-              </p>
-              <!-- <p class="dolore-magna-aliqua">from various barands here.</p> -->
-            </div>
-            <div class="button5">
-              <div class="v6-icon-free17">
-                <div class="icon15"></div>
-              </div>
-              <div class="shop-now1">shop now</div>
-            </div>
-          </div>
-        </div>
-      </div>
+        <div class="section1">
+          <div class="mar"><marquee>यत् सारभूतं तदुपासितव्यं, हंसो यथा क्षीरमिवाम्भुमध्यात्॥ उद्यमेन हि सिध्यन्ति कार्याणि न मनोरथैः । न हि सुप्तस्य सिंहस्य प्रविशन्ति मुखे मृगाः॥</marquee></div>
       <div class="header">
+       
         <div class="top-header">
           <div class="top-header-child"></div>
           <div class="account">
@@ -793,7 +783,7 @@
               <div class="v6-icon-free">
                 <div class="icon"></div>
               </div>
-              <div class="shop-now2"><a href="/login.html">Login</a></div>
+              <div class="shop-now2"><a href="/login.html"><button>Login</button></a></div>
             </div>
             <div class="button6">
               <div class="v6-icon-free">
@@ -802,11 +792,10 @@
               <!-- <div class="shop-now2">Shoping</div> -->
 
               <a
-                href="newPage.html?totalValue="
+                href="shopping.html"
                 class="shop-now2"
                 id="checkoutBtn"
-                >Shopping</a
-              >
+                ><button> View Cart</button></a>
             </div>
           </div>
           <div class="logo1">
@@ -816,7 +805,7 @@
             <img class="logo-item" alt="" src="./public/group-97.svg" />
           </div>
           <div class="v6-icon-free20">
-            <div class="icon20"></div>
+            <!-- <div class="icon20"></div> -->
           </div>
         </div>
         <div class="menu">
@@ -839,10 +828,36 @@
             <div class="item"><a href="#All products">Collection</a></div>
           </div>
           <div class="item-menu1">
-            <div class="item">About us</div>
+            <div class="item"><A HREF="/program/ABOUT.HTML">About us</A></div>
           </div>
         </div>
       </div>
+    </div>
+        <div class="product5">
+          <div class="image-product">
+            <div class="image-product-child"></div>
+            <div class="img19">
+              <img class="image-product-12-icon" alt="" src="./images/rudra 1.jpg" />
+            </div>
+          </div>
+          <div class="content">
+            <div class="collections">collections</div>
+            <div class="you-can-explore-container">
+              <p class="lorem-ipsum-dolor">
+                you can explore and shop many differnt collection of rudraksha.
+              </p>
+              <!-- <p class="dolore-magna-aliqua">from various barands here.</p> -->
+            </div>
+            <div class="button5">
+              <div class="v6-icon-free17">
+                <div class="icon15"></div>
+              </div>
+              <Shop class="shop-now1"><a href="">Shop Now</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    
     </div>
   </body>
 </html>
