--- a/shopping.html
+++ b/shopping.html
@@ -105,10 +105,12 @@
   <div class="cart">
     <h2>Cart</h2>
     <div id="cart-items"></div>
-    <button class="checkout-btn" onclick="checkout()">Checkout</button>
+    <a href="https://buy.stripe.com/test_4gw3e59z8eAc9Gw288">
+    <button class="checkout-btn">Checkout</button>
+  </a>
   </div>
-
-  <script>
+    <!-- <button>Payment here</button> -->
+  <!-- <script>
     var cartItems = [];
 
     function addToCart(product) {
@@ -137,6 +139,6 @@
         alert("Your cart is empty. Please add items before checking out.");
       }
     }
-  </script>
+  </script> -->
 </body>
 </html>
