--- a/index2.html
+++ b/index2.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./index.css" />
     <!-- ...existing HTML code... -->
 
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js" defer></script>
     <!-- <script src="index2.js"></script> -->
-    <script src="index3.js" defer></script>
+    <!-- <script src="index3.js" defer></script> -->
 
     <link
       rel="stylesheet"
