added all list items

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
-    <!-- ...existing HTML code... -->
-
-    <script src="index.js" defer></script>
-    <!-- <script src="index2.js"></script> -->
+    <script src="index2.js" defer></script>
     <!-- <script src="index3.js" defer></script> -->
 
     <link
@@ -259,15 +256,15 @@
               <div class="or-subscribe-to">Or subscribe to the newsletter</div>
             </div>
           </div> -->
-          <DIV class="contentx">
-            <H2><b>Why Rudraksham Is Truly & Spiritually Yours?</b></H2>
+          <div class="contentx">
+            <h2><b>Why Rudraksham Is Truly & Spiritually Yours?</b></h2>
 
 We at Rudraksham have worked diligently for many years with our Guru and Yogis to unlock the hidden power of Rudraksha. There are many sellers of Rudraksha today but sadly they do not know the hidden and most powerful methods to unlock the true potential of Rudraksha. A simple Puja or blessing is not enough.
 
 Our process Uses the hidden mantras passed only from guru to disciple. The entire energizing ritual lasts a minimum of 8 days and can take up to 108. During this time we are deep into the Sadhana with full focus and attention.
 
 In a short time, you can see the difference between a properly energized bead and one that has had an elementary blessing or none at all. OUR Rudraksha are as described in Shastra with the POWER to change your life.
-          </DIV>
+          </div>
         </div>
       </div>
       <div class="slider-products">
@@ -362,7 +359,7 @@ In a short time, you can see the difference between a properly energized bead an
                   <div class="sale">sale</div>
                 </div>
               </div>
-              <div class="bottom-product2">
+              <div class="bottom-product">
                 <div class="bag2"><button>Add to Cart</button></div>
                 <div class="div2 price">385</div>
                 <div class="div3">$464.00</div>
@@ -407,37 +404,11 @@ In a short time, you can see the difference between a properly energized bead an
       </div>
       <div class="brand-banner">
         <img class="background-icon" alt="" src="./images/30.jpg" />
-
-        <!-- <div class="lustrous-yet-understated-container">
-          <p class="lorem-ipsum-dolor">
-            Lustrous yet understated. The new evening
-          </p>
-          <p class="lorem-ipsum-dolor">
-            wear collection exclusively offered at the
-          </p>
-          <p class="lorem-ipsum-dolor">
-            reopened Giorgio Armani boutique in Los
-          </p>
-          <p class="dolore-magna-aliqua">Angeles.</p>
-        </div> -->
         <img
           class="px-zara-logo-1-icon"
           alt=""
           src="./public/1024pxzara-logo-1@2x.png"
         />
-<!-- 
-        <img
-          class="px-zara-logo-2-icon"
-          alt=""
-          src="./public/1024pxzara-logo-2@2x.png"
-        /> -->
-
-        <!-- <div class="button3">
-          <div class="v6-icon-free15">
-            <div class="icon15"></div>
-          </div>
-          <div class="shop-now">see collection</div>
-        </div> -->
       </div>
       <div class="grid-products">
         <div class="section-title2">
@@ -468,6 +439,7 @@ In a short time, you can see the difference between a properly energized bead an
           </div>
         </div>
         <div class="products1">
+          <!-- card10 -->
           <div class="card10">
             <div class="top-product">
               <div class="img11">
@@ -495,6 +467,7 @@ In a short time, you can see the difference between a properly energized bead an
               </div>
             </div>
           </div>
+          <!-- card11 -->
           <div class="card11">
             <div class="top-product">
               <div class="img11">
@@ -519,6 +492,7 @@ In a short time, you can see the difference between a properly energized bead an
               </div>
             </div>
           </div>
+          <!-- card12 -->
           <div class="card12">
             <div class="top-product">
               <div class="img11">
@@ -543,6 +517,7 @@ In a short time, you can see the difference between a properly energized bead an
               </div>
             </div>
           </div>
+          <!-- card13  -->
           <div class="card13">
             <div class="top-product">
               <div class="img11">
@@ -557,8 +532,8 @@ In a short time, you can see the difference between a properly energized bead an
                 <div class="sale">sale</div>
               </div>
             </div>
-            <div class="bottom-product2">
-              <div class="bag2"><button>Add to Cart</button></div>
+            <div class="bottom-product">
+              <div class="bag2"><button class="addToCartBtn" value="1098" >Add to Cart</button></div>
               <div class="div2">1098.00</div>
               <div class="div3">1220.00</div>
               <div class="title-product3">
@@ -566,6 +541,7 @@ In a short time, you can see the difference between a properly energized bead an
               </div>
             </div>
           </div>
+          <!-- card14  -->
           <div class="card14">
             <div class="top-product">
               <div class="img11">
@@ -581,13 +557,14 @@ In a short time, you can see the difference between a properly energized bead an
               </div>
             </div>
             <div class="bottom-product">
-              <div class="bag"><button>Add to Cart</button></div>
+              <div class="bag"><button class="addToCartBtn" value="7599" >Add to Cart</button></div>
               <div class="div6">7599</div>
               <div class="title-product8">
                 <div class="customer-services">18 phase Nepali rudraksha</div>
               </div>
             </div>
           </div>
+          <!-- card15  -->
           <div class="card15">
             <div class="top-product">
               <div class="img11">
@@ -603,13 +580,14 @@ In a short time, you can see the difference between a properly energized bead an
               </div>
             </div>
             <div class="bottom-product">
-              <div class="bag"><button>Add to Cart</button></div>
+              <div class="bag"><button class="addToCartBtn" value="399">Add to Cart</button></div>
               <div class="div">399</div>
               <div class="title-product9">
                 <div class="customer-services">Bracelet</div>
               </div>
             </div>
           </div>
+          <!-- card16 -->
           <div class="card16">
             <div class="top-product">
               <div class="img11">
@@ -624,10 +602,10 @@ In a short time, you can see the difference between a properly energized bead an
                 <div class="sale">sale</div>
               </div>
             </div>
-            <div class="bottom-product2">
-              <div class="bag2"><button>Add to Cart</button></div>
-              <div class="div2">399</div>
-              <div class="div3">464.00</div>
+            <div class="bottom-product">
+              <div class="bag2"><button class="addToCartBtn" value="399" >Add to Cart</button></div>
+              <div class="div2 price">399</div>
+              <div class="div3 ">464.00</div>
               <div class="title-product2">
                 <div class="customer-services">
                   Silver Shine Alloy Golden Contemporary
@@ -635,6 +613,7 @@ In a short time, you can see the difference between a properly energized bead an
               </div>
             </div>
           </div>
+          <!-- card17 -->
           <div class="card17">
             <div class="top-product">
               <div class="img11">
@@ -650,7 +629,7 @@ In a short time, you can see the difference between a properly energized bead an
               </div>
             </div>
             <div class="bottom-product">
-              <div class="bag"><button>Add to Cart</button></div>
+              <div class="bag"><button class="addToCartBtn" value="490" >Add to Cart</button></div>
               <div class="div">490.00</div>
               <div class="title-product1">
                 <div class="customer-services">Black Rudraksha MAla</div>
@@ -859,5 +838,6 @@ In a short time, you can see the difference between a properly energized bead an
       </div>
     
     </div>
+  
   </body>
 </html>
