--- a/shopping.html
+++ b/shopping.html
@@ -1,144 +1,206 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Shopping Page</title>
-  <script src="index.js"></script>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f5f5f5;
-    }
-
-    h1 {
-      color: #333;
-      text-align: center;
-    }
-
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .product {
-      width: 250px;
-      background-color: #fff;
-      margin: 20px;
-      padding: 20px;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .product img {
-      width: 100%;
-      height: auto;
-      margin-bottom: 10px;
-      border-radius: 4px;
-    }
-
-    .product-name {
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    .product-price {
-      color: #888;
-      margin-bottom: 10px;
-    }
-
-    .add-to-cart-btn {
-      display: block;
-      width: 100%;
-      background-color: #4caf50;
-      color: #fff;
-      border: none;
-      padding: 10px 0;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    .add-to-cart-btn:hover {
-      background-color: #45a049;
-    }
-
-    .cart {
-      background-color: #fff;
-      border-radius: 4px;
-      padding: 20px;
-    }
-
-    .cart h2 {
-      color: #333;
-    }
-
-    .cart-item {
-      margin-bottom: 10px;
-    }
-
-    .checkout-btn {
-      background-color: #4caf50;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    .checkout-btn:hover {
-      background-color: #45a049;
-    }
-  </style>
-</head>
-<body>
-  <h1>Shopping Page</h1>
-
-  
-
-  <div class="cart">
-    <h2>Cart</h2>
-    <div id="cart-items"></div>
-    <a href="https://buy.stripe.com/test_4gw3e59z8eAc9Gw288">
-    <button class="checkout-btn">Checkout</button>
-  </a>
-  </div>
-    <!-- <button>Payment here</button> -->
-  <!-- <script>
-    var cartItems = [];
-
-    function addToCart(product) {
-      cartItems.push(product);
-      updateCart();
-    }
-
-    function updateCart() {
-      var cartItemsContainer = document.getElementById("cart-items");
-      cartItemsContainer.innerHTML = "";
-
-      cartItems.forEach(function(item) {
-        var cartItem = document.createElement("div");
-        cartItem.className = "cart-item";
-        cartItem.appendChild(document.createTextNode(item));
-        cartItemsContainer.appendChild(cartItem);
-      });
-    }
-
-    function checkout() {
-      if (cartItems.length > 0) {
-        alert("Thank you for your purchase!");
-        cartItems = [];
-        updateCart();
-      } else {
-        alert("Your cart is empty. Please add items before checking out.");
+  <head>
+    <title>Shopping Page</title>
+    <style>
+      * {
+        box-sizing: border-box;
       }
-    }
-  </script> -->
-</body>
+
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 20px;
+        background-color: #f5f5f5;
+      }
+
+      h1 {
+        color: #333;
+        text-align: center;
+      }
+
+      .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      .product {
+        width: 250px;
+        background-color: #fff;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 4px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+
+      .product img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 10px;
+        border-radius: 4px;
+      }
+
+      .product-name {
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      .product-price {
+        color: #888;
+        margin-bottom: 10px;
+      }
+
+      .add-to-cart-btn {
+        display: block;
+        width: 100%;
+        background-color: #4caf50;
+        color: #fff;
+        border: none;
+        padding: 10px 0;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      .add-to-cart-btn:hover {
+        background-color: #45a049;
+      }
+
+      .cart {
+        background-color: #fff;
+        border-radius: 4px;
+        padding: 20px;
+      }
+
+      .cart h2 {
+        color: #333;
+      }
+
+      .cart-item {
+        margin-bottom: 10px;
+      }
+
+      .checkout-btn {
+        background-color: #4caf50;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      .checkout-btn:hover {
+        background-color: #45a049;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Shopping Page</h1>
+
+    <div class="cart">
+      <h2>Cart</h2>
+      <div id="cart-items"></div>
+      <button class="checkout-btn" onclick="handleCheckout()">Checkout</button>
+    </div>
+    <script>
+      var allItems = localStorage.getItem("cartItems");
+      var cartItems = JSON.parse(allItems);
+      console.log(allItems);
+
+      var products = [
+        { name: "Product 1", price: 10 },
+        { name: "Product 2", price: 20 },
+        // Add more product objects as needed
+      ];
+
+      var cartItemsContainer = document.getElementById("cart-items");
+      cartItems.forEach(function (item) {
+        var cartItemDiv = document.createElement("div");
+        cartItemDiv.classList.add("cart-item");
+
+        var itemName = document.createElement("p");
+        itemName.classList.add("product-name");
+        itemName.innerText = "Name: " + item.name;
+
+        var itemPrice = document.createElement("p");
+        itemPrice.classList.add("product-price");
+        itemPrice.innerText = "Price: Rs " + item.price;
+
+        var itemQuantity = document.createElement("p");
+        itemQuantity.innerText = "Quantity: " + item.quantity;
+
+        var itemSubtotal = document.createElement("p");
+        itemSubtotal.innerText = "Subtotal: Rs " + item.subtotal;
+
+        cartItemDiv.appendChild(itemName);
+        cartItemDiv.appendChild(itemPrice);
+        cartItemDiv.appendChild(itemQuantity);
+        cartItemDiv.appendChild(itemSubtotal);
+
+        cartItemsContainer.appendChild(cartItemDiv);
+      });
+
+      function handleCheckout() {
+        if (!Array.isArray(cartItems)) {
+          console.log("Invalid cart items:", cartItems);
+          return;
+        }
+
+        const lineItems = cartItems.map((item) => {
+          const { name, price, quantity, subtotal } = item;
+
+          return {
+            price_data: {
+              currency: "inr",
+              product_data: {
+                name,
+              },
+              unit_amount: Math.round(price * 100), // Convert rupees to paise and round to the nearest whole number
+            },
+            quantity,
+          };
+        });
+
+        const validLineItems = lineItems.filter((item) => item !== null);
+
+        if (validLineItems.length === 0) {
+          console.log("No valid line items found.");
+          return;
+        }
+
+        const total = validLineItems
+          .reduce((acc, item) => {
+            const price = item.price_data.unit_amount / 100;
+            const quantity = item.quantity;
+            return acc + price * quantity;
+          }, 0)
+          .toFixed(2);
+
+        console.log("Total Price:", total, validLineItems); // It should be a number now
+
+        console.log(cartItems);
+        fetch(
+          "https://olivine-rich-ceratonykus.glitch.me/create-checkout-session",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ lineItems: validLineItems }),
+          }
+        )
+          .then(function (response) {
+            return response.json();
+          })
+          .then(function (data) {
+            window.location.href = data.url;
+          })
+          .catch(function (error) {
+            console.log("Error:", error);
+          });
+      }
+    </script>
+  </body>
 </html>
