--- a/index.html
+++ b/index.html
@@ -797,20 +797,33 @@ In a short time, you can see the difference between a properly energized bead an
           <div class="item-menu1">
             <div class="item"></div>
           </div>
-          <div class="item-menu1">
-            <div class="item"><a href="#Home">Home</a></div>
+          <div class="menu">
+            <div class="item-menu1">
+                <div class="item"><a href="#Home">Home</a></div>
+            </div>
+            <div class="item-menu1">
+                <div class="item"><a href="#Collection">All Products</a></div>
+            </div>
+            <div class="item-menu1">
+              <div class="item"><a href="/raj/bracelet.html">Bracelets</a></div>
           </div>
           <div class="item-menu1">
-            <div class="item"><a href="#Collection">All Products</a></div>
+                <div class="item"><a href="/raj/beads.html">Beads</a></div>
+            </div>
+            <div class="item-menu1">
+              <div class="item"><a href="/raj/Necklace.html">Necklaces</a></div>
           </div>
-          <div class="item-menu1">
-            <div class="item"><a href="#All products">Collection</a></div>
-          </div>
-          <div class="item-menu1">
-            <div class="item"><A HREF="/program/ABOUT.HTML">About us</A></div>
-          </div>
+            <div class="item-menu1">
+                <div class="item"><a href="/our specialist (1).html">Our Specialists</a></div>
+            </div>
+            <div class="item-menu1">
+                <div class="item"><a href="/contact us.html">Contact Us</a></div>
+            </div>
+            <div class="item-menu1">
+                <div class="item"><a href="/program/ABOUT.HTML">About Us</a></div>
+            </div>
         </div>
-      </div>
+        
     </div>
         <div class="product5">
           <div class="image-product">
