--- a/Login.Html
+++ b/Login.Html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Signup Page</title>
+    <title>Login Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -75,23 +75,16 @@
 </head>
 
 <body>
-    <h2>Create New Account</h2>
-    <form action="/signup" method="POST" onsubmit="submitForm(event)">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
+    <h2>Login</h2>
+    <form action="/login" method="POST" onsubmit="loginUser(event)">
         <label for="mobile">Mobile Number:</label>
         <input type="text" id="mobile" name="mobile" required><br><br>
-        <label for="email">Email Address:</label>
-        <input type="text" id="email" name="email" required><br><br>
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address" required><br><br>
-        <label for="pincode">Pincode:</label>
-        <input type="text" id="pincode" name="pincode" required><br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
-        <input type="submit" value="Sign Up"><br><br>
+        <input type="submit" value="Login"><br><br>
     </form>
-    <p>Already have an account? <a href="/login.html">Login</a></p>
+    <p>Don't have an account? <a href="/signup.html">Sign up</a></p>
+
 <script>
         const firebaseConfig = {
         apiKey: "AIzaSyC154ZjNT5mzCvK6I4R_VjzwbOC51DqtcQ",
@@ -102,53 +95,39 @@
         appId: "1:977127571142:web:5d3be7311b498b7eb8e1c7",
         measurementId: "G-VHBP8169JT",
       };
-        firebase.initializeApp(firebaseConfi
+       
+        firebase.initializeApp(firebaseConfig);
         var db = firebase.firestore();
 
-        function submitForm(event) {
+        function loginUser(event) {
             event.preventDefault();
 
-            var username = document.getElementById("username").value;
             var mobile = document.getElementById("mobile").value;
-            var email = document.getElementById("email").value;
-            var address = document.getElementById("address").value;
-            var pincode = document.getElementById("pincode").value;
             var password = document.getElementById("password").value;
-            db.collection("users").add({
-                    username: username,
-                    mobile: mobile,
-                    email: email,
-                    address: address,
-                    pincode: pincode,
-                    password: password
-                })
-                .then(function (docRef) {
-                    showSuccessAlert();
-                    document.getElementById("username").value = "";
-                    document.getElementById("mobile").value = "";
-                    document.getElementById("email").value = "";
-                    document.getElementById("address").value = "";
-                    document.getElementById("pincode").value = "";
-                    document.getElementById("password").value = "";
-
-                    setTimeout(function () {
-                        window.location.href = "index2.html";
-                    }, 3000); 
-                })
+            db.collection("users").where("mobile", "==", mobile).where("password", "==", password)
+                .get()
+                .then(function (querySnapshot)) {
+                    if (!querySnapshot.empty) {
+                        showSuccessAlert();
+                        document.getElementById("mobile").value = "";
+                        document.getElementById("password").value = "";
+                        setTimeout(function () {
+                            window.location.href = "index2.html";
+                        }, 3000); 
+                    } else 
+                        alert("Invalid login credentials. Please try again.");
+                    }
+                }
                 .catch(function (error) {
-                    console.error("Error adding document: ", error);
+                    console.error("Error getting documents: ", error);
                 });
-        }
-
+        
         function showSuccessAlert() {
             var successAlert = document.createElement("div");
             successAlert.className = "alert-success";
-            successAlert.innerHTML = "Registration successful! You can now <a href='/login.html'>login</a>.";
+            successAlert.innerHTML = "Login successful! Welcome back.";
             document.body.appendChild(successAlert);
         }
     </script>
 </body>
-
 </html>
-
-
